chore: add Start/Stop methods to server service
